# Ray-Tracer

./: CApp.cpp  CApp.h  CMakeLists.txt  CMakePresets.json  image.cpp  image.hpp  main.cpp  vcpkg.json
src/: CApp.cpp  camera.cpp  gtfm.cpp  image.cpp  lightbase.cpp  main.cpp  objectbase.cpp  objplane.cpp  objsphere.cpp  pointlight.cpp  ray.cpp  scene.cpp
src/headers/: CApp.h  camera.hpp  gtfm.hpp  image.hpp  lightbase.hpp  objectbase.hpp  objplane.hpp  objsphere.hpp  pointlight.hpp  ray.hpp  scene.hpp
